--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,13 @@ html, body {
 }
 
 .main_intro_aboutUs {
-  padding: 100px 30px 20px 30px;
+  padding: 100px 15px 20px 15px;
   color: white;
     background-color: rgb(111, 111, 161);
     display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .second_intro {
@@ -115,7 +114,6 @@ button:hover {
 }
 
 .form-info {
-  /* width: 50%; */
   padding-bottom: 30px;
   width: 300px;
 }
@@ -178,20 +176,16 @@ input {
 }
 
 
-.main_intro_aboutUs {
-height: 130vh;
-}
-
 
 
 
 /* MEDIA QUERIES */
   @media screen and (min-width: 768px) {
-    iframe {
+    /* iframe {
       text-align: center;
       width: 100%;
       height: 500px;
-    }
+    } */
       .main_intro,
       .second_intro {
         display: flex;
