--- a/css/profile.css
+++ b/css/profile.css
@@ -1,5 +1,5 @@
 .main_profile {
-    height: 200vh;
+    /* height: 200vh; */
     padding-top: 150px;
     background-color:rgb(111, 111, 161);
     display: flex;
@@ -79,7 +79,7 @@
     .main_profile {
         flex-direction: column-reverse;
         /* padding-bottom: 150px; */
-height: 210vh;
+/* height: 210vh; */
         /* justify-content: start;
         align-items: flex-end; */
     }
