--- a/css/roadmap.css
+++ b/css/roadmap.css
@@ -1,63 +1,53 @@
-.skill_container {
-    row-gap: 0;
+.roadmap-page-main {
+    background-color: rgb(111, 111, 161);
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
-.skill_header {
-    display: flex;
+
+.roadmap-page-content {
+    row-gap: 0;
+    width: 100%;
+}
+
+.roadmap-page-test-opener-header {
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
 }
 
-.skill_icon,
-.skill_arrow {
+.roadmap-page-content-icon,
+.roadmap-page-content-arrow {
     font-size: 2rem;
     margin-right: 10px;
     margin-left: 20px
 }
 
-
-.skill_percentage {
-    display: block;
-}
-
-.skill_list {
-    row-gap: 1.5rem;
-    padding-left: 2.5rem;
-}
-
-.skills_close .skill_list {
-    height: 0;
-    overflow: hidden;
-}
-
-.skills_open .skill_list {
-    height: max-content;
-}
-
-.skills_open .skill_arrow {
-    transform: rotate(-180deg);
-}
-
-
-
-.skill_content:first-child {
-    background-color: white;
-}
-.skill_content:last-child {
-    margin-top:50px;
-    background-color: rgb(255, 201, 100);
-
-}
-
-.skill_content {
+.roadmap-page-content-top, 
+.roadmap-page-content-bottom {
     padding: 25px;
     width: 70%;
     margin: 0 auto;
     border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.test_opener {
+.roadmap-page-content-top  {
+    margin-top:50px;
+    background-color: white;
+    
+}
+
+.roadmap-page-content-bottom {
+    margin-top:50px;
+    background-color: rgb(255, 201, 100);
+}
+
+.roadmap-page-test-opener {
     padding: 20px;
     width: 90%;
     margin: 0 auto;
@@ -65,30 +55,26 @@
     background-color: orange;
 }
 
-.button_testPage {
+.roadmap-page-test-opener-button {
     background-color: rgb(111, 111, 161);
     color: white;
     font-weight: 600;
     width: 200px;
 }
 
-.test_opener:hover,
-.skill_content:hover {
+.roadmap-page-test-opener:hover,
+.roadmap-page-content-top:hover,
+.roadmap-page-content-bottom:hover {
     transform: scale(1.02);
     transition: 0.25s;
 }
 
-.main_roadmap {
-    background-color: rgb(111, 111, 161);
-    padding: 100px 30px 30px 30px;
-}
-
-.roadmap_title {
+.roadmap-page-title {
     text-align: center;
     color: white;
-  }
+}
   
-.roadmap_title_base {
+.roadmap-page-title-line {
     background-color: orange;
     height: 3px;
     width: 30%;
@@ -96,17 +82,11 @@
     margin-bottom: 40px;
 }
   
-  h2 {
+h2 {
     font-size: 40px;
-  }
+}
 
-  @media screen and (max-width: 767px) {
-    .skill_content {
-        width: 86%;
-        margin: 0 auto;
-        border-radius: 5px;
-    }
-
+@media screen and (max-width: 767px) {
     h2,
     h1 {
         font-size: 25px;  
