--- a/css/roadmap.css
+++ b/css/roadmap.css
@@ -52,7 +52,7 @@
     width: 90%;
     margin: 0 auto;
     border-radius: 5px;
-    background-color: orange;
+    background-color: rgb(255, 201, 100);
 }
 
 .roadmap-page-test-opener-button {
