--- a/css/profile.css
+++ b/css/profile.css
@@ -26,7 +26,7 @@
 
 .orange_line {
     height: 4px;
-    background-color: orange;
+    background-color: rgb(255, 159, 70);
     margin-bottom: 20px;
 }
 
