--- a/css/roadmap.css
+++ b/css/roadmap.css
@@ -55,6 +55,10 @@
     background-color: rgb(238, 158, 83);
 }
 
+.roadmap-page-content-title {
+    cursor: pointer;
+}
+
 .roadmap-page-test-opener-button {
     background-color: rgb(111, 111, 161);
     color: white;
