--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@500;600;700&display=swap");
-
-
-  
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@500;600;700&display=swap"); 
 *{
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
@@ -30,19 +27,29 @@ html, body {
 height: 20px;
 }
 
+.cl-white {
+  color: white;
+}
 
+.ta-center {
+  text-align: center;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
 
 /* BODY */
 
 .main-page-intro,
 .main-page-second-intro {
-    padding: 90px 30px 50px 30px;
+    padding: 90px 0px 0px 30px;
     background-color: rgb(111, 111, 161);
 
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .aboutus-main-intro {
@@ -60,17 +67,26 @@ height: 20px;
   padding: 90px 30px 50px 30px;
 }
 
+.main-page-third_intro {
+  background-color: rgb(111, 111, 161);
+  padding: 50px;
+}
+
 .main-page-intro-content {
   align-items: center;
   color: white;
   font-weight: 600;
 }
 
+.main-page-button1 {
+  margin-bottom: 50px;
+}
+
 
 .main-page-intro-picture {
   margin-top: 20px;
-height: 150px;
-overflow:visible
+height: 300px;
+overflow: hidden
 }
 
 .main-page-second-intro-content ul li {
@@ -81,6 +97,32 @@ overflow:visible
   height: 170px;
 }
 
+.goal-box {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.goal {
+  background-color: white;
+  width: 100%;
+  height: 100px;
+  margin: 10px;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 10px 10px 0px -3px rgba(255,159,70,1);
+  cursor: pointer
+
+}
+
+.goal:hover {
+  box-shadow: 0px 0px 0px -3px rgba(255,159,70,1);
+
+}
 
 body {
     margin: 0px;
@@ -232,13 +274,12 @@ input {
       .main-page-second_intro {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
       }
 
     .main-page-intro-picture,
      .main-page-second-intro-picture {
-       height: 260px;
+       height: 450px;
+       width: 100%;
        margin-left: 20px;
      }
      
@@ -278,6 +319,17 @@ input {
     }
     .social-media-aboutus li a {
       background-color: rgb(255, 159, 70);
+    }
+
+    .goal-box {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+
+    .goal {
+      width: 40%;
+
     }
 }
 
